[gd_scene load_steps=9 format=3 uid="uid://enwoaqi0rnei"]

[ext_resource type="Script" path="res://scripts/bomb.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bdomqql6y50po" path="res://assets/brickfloor.png" id="2"]
[ext_resource type="AudioStream" uid="uid://boidckhyrna5i" path="res://sound/fx/explosion.wav" id="2_gmoi6"]
[ext_resource type="Texture2D" uid="uid://drfbkdqmj0gu2" path="res://assets/explosion.png" id="3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6btgv"]
size = Vector2(39, 40)

[sub_resource type="Curve" id="Curve_4yges"]
max_value = 2.0
_data = [Vector2(0.00150494, 0.398437), 0.0, 0.0, 0, 0, Vector2(0.0152287, 1.42969), 0.0, 0.0, 0, 0, Vector2(0.478607, 1.30078), 0.0, 0.0, 0, 0, Vector2(1, 0.291016), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Animation" id="Animation_21j5c"]
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.8, 1.1, 1.3, 1.5, 1.8, 1.9, 2, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(8, 8, 8, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(8, 8, 8, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(8, 8, 8, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(8, 8, 8, 1), Color(1, 1, 1, 1), Color(8, 8, 8, 1), Color(1, 1, 1, 1), Color(8, 8, 8, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.8, 3.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"explode"
}, {
"args": [],
"method": &"done"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion1:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion2:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h2w7m"]
_data = {
"anim": SubResource("Animation_21j5c")
}

[node name="Bomb" type="StaticBody2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource("1")
explosion_audio = ExtResource("2_gmoi6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_6btgv")
disabled = true

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="DetectShape" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_6btgv")

[node name="Raycasts" type="Node2D" parent="."]

[node name="Down" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 48)
collision_mask = 7
collide_with_areas = true

[node name="Up" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, -48)
collision_mask = 7
collide_with_areas = true

[node name="Right" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(48, 0)
collision_mask = 7
collide_with_areas = true

[node name="Left" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-48, 0)
collision_mask = 7
collide_with_areas = true

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-2.92606, -2.92606)
texture = ExtResource("2")
region_enabled = true
region_rect = Rect2(144, 0, 48, 48)

[node name="Explosion1" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.95
texture = ExtResource("3")
emission_shape = 3
emission_rect_extents = Vector2(80, 1)
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
angular_velocity_min = 187.35
angular_velocity_max = 188.35
scale_amount_curve = SubResource("Curve_4yges")

[node name="Explosion2" type="CPUParticles2D" parent="."]
rotation = 1.57162
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.95
texture = ExtResource("3")
emission_shape = 3
emission_rect_extents = Vector2(80, 1)
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
angular_velocity_min = 187.35
angular_velocity_max = 188.35
scale_amount_curve = SubResource("Curve_4yges")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h2w7m")
}
autoplay = "anim"

[node name="ExplosionSoundPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.8

[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
